--- a/todo.txt
+++ b/todo.txt
@@ -12,21 +12,18 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-- Integrate
-
-- Modify Lint settings for client global variables (off-camera)
+- Simplifying and improving the code
+  - Modify Lint settings for client global variables (off-camera)
 - click tracking needs to account for margin, border, and padding
   - figure out how to factor out common setup code
   - test that em is converted px
 
 To Do on current task:
-- BEFORE NEXT EPISODE:
-  - Consider reflectorapp.com
-  - Mention http://www.letscodejavascript.com/v3/comments/live/2#comment-819666265
+- Abstract JQuery into its own module or class; use that as springboard for higher-level abstractions for our code
 
-- Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
 - Factor out common code between touch events and mouse events
 - Is our client test doing too much--do we need to factor a new module or class?
+- Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
 
 Future ideas:
 - Create 'fail fast' assertion code
