Converted DOM Element module into class

--- a/todo.txt
+++ b/todo.txt
@@ -20,8 +20,10 @@ Engineering Tasks:
 
 To Do on current task:
 - Create DOM Element abstraction
-  - Turn it into an object
+  - Create the DOM Element instance at the top of _client_test.js
+  - Take over more functions from client.js and _client_test.js
   - Move all uses of JQuery into this abstraction so it is isolated in one place
+  - DomElement constructor should expect raw DOM element, not JQuery element
 
 - Factor out common code between touch events and mouse events
 - Is our client test doing too much--do we need to factor a new module or class?
