--- a/todo.txt
+++ b/todo.txt
@@ -21,10 +21,11 @@ Engineering Tasks:
   - test that em is converted px
 
 To Do on current task:
+- Finish testing dom_element.js - focusing on getting mouse events under test
+- Test dom_element positioning
 - Finish getting rid of oldDrawingArea in _client_test.js
 - Move all uses of JQuery into this abstraction so it is isolated in one place
 - DomElement constructor should expect raw DOM element, not JQuery element
-- Test dom_element.js
 
 
 
