--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,9 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-- Simplifying and improving the code
+* Simplify and improve the code
+  * Create DomElement abstraction
+  - Introduce modules
   - Create Raphaël abstraction
   - Modify Lint settings for client global variables (off-camera)
 - click tracking needs to account for margin, border, and padding
@@ -21,7 +23,7 @@ Engineering Tasks:
   - test that em is converted px
 
 To Do on current task:
-- Finish testing dom_element.js - focusing on getting mouse events under test
+* Finish testing dom_element.js - focusing on getting mouse events under test
 - Test dom_element positioning
 - Finish getting rid of oldDrawingArea in _client_test.js
 - Move all uses of JQuery into this abstraction so it is isolated in one place
