--- a/todo.txt
+++ b/todo.txt
@@ -28,6 +28,7 @@ To Do on current task:
 - Make DomElement.element private
 - Move all uses of JQuery into this abstraction so it is isolated in one place
 - DomElement constructor should expect raw DOM element, not JQuery element
+- Rename DomElement to HtmlElement
 
 
 
