--- a/todo.txt
+++ b/todo.txt
@@ -23,9 +23,10 @@ Engineering Tasks:
   - Modify Lint settings for client global variables (off-camera)
 
 To Do on current task:
-- BEFORE RECORDING: Add tests for multi-touch events (explain at beginning of next chapter)
-
-
+- BEFORE/AT BEGINNING OF RECORDING: (explain at beginning of next chapter)
+  - Add tests for multi-touch events
+  - Integrate
+  - Discuss Testacular name change (to Karma: https://github.com/karma-runner/karma/issues/376 )
 - Factor out common code between touch events and mouse events
 - Is our client test doing too much--do we need to factor a new module or class?
 - Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
