--- a/todo.txt
+++ b/todo.txt
@@ -17,15 +17,12 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-- Get web page working again
-- Update smoke test to include client-side code
+* Update smoke test to include client-side code
+  - Fix HTML so it runs our drawing code correctly
 - Introduce modules
   - Use Modernizr to eliminate duplicate browserSupportsTouchEvents() function (in _client_test.js & _dom_element_test.js)
 
 To Do on current task:
-- Replace node-static, submit our change as a patch, or come up with some better of dealing with node-static's caching
-  - Migrate to 'send'
-  - Uninstall node-static
 
 Future ideas:
 - Create 'fail fast' assertion code
