Finished PhantomJS spike

--- a/todo.txt
+++ b/todo.txt
@@ -24,7 +24,12 @@ Engineering Tasks:
   - Use Modernizr to eliminate duplicate browserSupportsTouchEvents() function (in _client_test.js & _dom_element_test.js)
 
 To Do on current task:
--
+- Spike PhantomJS
+* Integrate PhantomJS into our smoke test
+- Factor out our Raphael line-segment test code
+- Modify smoke test to draw a line and assert that the line is present
+- Update our build to make everything automatic
+- Refactor and final polish
 
 Future ideas:
 - Create 'fail fast' assertion code
