--- a/todo.txt
+++ b/todo.txt
@@ -25,6 +25,8 @@ Engineering Tasks:
 
 To Do on current task:
 * Factor out our Raphael line-segment test code
+  - Fix breaking encapsulation with svgCanvas._paper
+  - Fix breaking encapsulation with htmlElement._element[0]
 - Modify smoke test to draw a line and assert that the line is present
 - Update our build to make everything automatic
 - Refactor and final polish
