Added tests to SvgCanvas

--- a/todo.txt
+++ b/todo.txt
@@ -25,6 +25,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Factor out our Raphael line-segment test code
+  - Deal with need to append to $(document.body)
   - Fix breaking encapsulation with svgCanvas._paper
     - Expose paper.height() and paper.width()
   - Fix breaking encapsulation with htmlElement._element[0]
