--- a/todo.txt
+++ b/todo.txt
@@ -25,6 +25,7 @@ To Do on current task:
 - BEFORE RECORDING:
   - Updated npm modules (and added them to package.json using --save)
   - upgrade to Node.js 0.10?
+  - Automatically run 'npm rebuild' from shell scripts (and update readme)
   - integrate
   - Mention Vlad Gurdiga's frame-based approach to front-end smoke tests: http://www.letscodejavascript.com/v3/comments/live/94#comment-883086789
   - Michal Svoboda's suggestion of returning an array rather than asserting in the test: http://www.letscodejavascript.com/v3/comments/live/101#comment-889773949
