--- a/README
+++ b/README
@@ -19,9 +19,9 @@ Before building for the first time:
 - Compile npm dependencies: 'npm rebuild'
 
 To build:
-- Run './jake.sh testacular' (Unix/Mac) or 'jake.bat testacular' (Windows)
+- Run './jake.sh karma' (Unix/Mac) or 'jake karma' (Windows)
 - Navigate at least one browser to http://localhost:8080
-- Run './jake.sh loose=true' (Unix/Mac) or 'jake.bat loose=true' (Windows)
+- Run './jake.sh loose=true' (Unix/Mac) or 'jake loose=true' (Windows)
 **Note: not all episodes' source code is in buildable state. The integration
   branch builds clean on Mac and Windows, and is assumed to work on Linux:
   - Change to integration branch: 'git checkout integration'
