--- a/todo.txt
+++ b/todo.txt
@@ -41,7 +41,7 @@ Future ideas:
 - Fix httpGet duplication
 - Automated npm rebuild ('npm rebuild' in jake.sh / jake.bat if .bin directory not found.)
 - Ensure that every browser has same of number of tests running
-- Automatically start Testacular (or provide friendlier error message when it isn't running?)
+- Automatically start Karma (or provide friendlier error message when it isn't running?)
 - Automate CI script
 - Resolve npm 'extraneous' warning (due to package.json not reflecting what's in node_modules)
 - Convert 'client' to be proper object rather than global singleton?
