--- a/todo.txt
+++ b/todo.txt
@@ -23,10 +23,9 @@ Engineering Tasks:
 
 To Do on current task:
 - BEFORE RECORDING:
-  - Updated npm modules (and added them to package.json using --save)
-  - Modified ./jake.sh and ./jake.bat to automatically run `npm rebuild`
+  - Updated npm modules
+  - Modified ./jake.sh and ./jake.bat to automatically run `npm rebuild` (and updated readme)
   - upgrade to Node.js 0.10?
-  - Automatically run 'npm rebuild' from shell scripts (and update readme)
   - integrate
   - Mention Vlad Gurdiga's frame-based approach to front-end smoke tests: http://www.letscodejavascript.com/v3/comments/live/94#comment-883086789
   - Michal Svoboda's suggestion of returning an array rather than asserting in the test: http://www.letscodejavascript.com/v3/comments/live/101#comment-889773949
