--- a/todo.txt
+++ b/todo.txt
@@ -25,7 +25,7 @@ To Do on current task:
 - BEFORE RECORDING:
   - Updated npm modules
   - Modified ./jake.sh and ./jake.bat to automatically run `npm rebuild` (and updated readme)
-  - upgrade to Node.js 0.10?
+  - upgraded Node.js 0.8.23 --> 0.10.7 and improved version checking logic
   - integrate
   - Mention Vlad Gurdiga's frame-based approach to front-end smoke tests: http://www.letscodejavascript.com/v3/comments/live/94#comment-883086789
   - Michal Svoboda's suggestion of returning an array rather than asserting in the test: http://www.letscodejavascript.com/v3/comments/live/101#comment-889773949
