--- a/todo.txt
+++ b/todo.txt
@@ -25,8 +25,8 @@ To Do on current task:
 - BEFORE RECORDING:
   - Updated npm modules
   - Modified ./jake.sh and ./jake.bat to automatically run `npm rebuild` (and updated readme)
-  - upgraded Node.js 0.8.23 --> 0.10.6 and improved version checking logic (0.10.7 not supported by Heroku yet)
-  - integrate
+  - Upgraded Node.js 0.8.23 --> 0.10.6 and improved version checking logic (0.10.7 not supported by Heroku yet)
+  - Integrated
   - Mention Vlad Gurdiga's frame-based approach to front-end smoke tests: http://www.letscodejavascript.com/v3/comments/live/94#comment-883086789
   - Michal Svoboda's suggestion of returning an array rather than asserting in the test: http://www.letscodejavascript.com/v3/comments/live/101#comment-889773949
 
