--- a/todo.txt
+++ b/todo.txt
@@ -18,18 +18,20 @@ User Stories:
 - Deploy (including smoke test to ensure that div is in home page)
 
 Engineering Tasks:
-- Introduce modules
-  - Use Modernizr to eliminate duplicate browserSupportsTouchEvents() function (in _client_test.js & _dom_element_test.js)
+- Get require(), modules, and exports working in Karma without using browserify
+  (so error messages have sensible filenames and line nums)
+- Figure out how to bundle vendor files
+- Cleanup
+  - Duplication between weewikipaint.js CONTENT_DIR and our Jakefile
+  - Do we want to copy src/server/ files to build directory?
+  - What about deployment? (Punt?)
+  - Use Modernizr to eliminate duplicate browserSupportsTouchEvents() function (in _client_test.js & _dom_element_test.js)?
 
 To Do on current task:
-- Get require() working in Karma without using browserify (so error messages have sensible filenames and line nums)
-  - (or) Get source maps to work with Karma
-- Figure out how to bundle vendor files
-
-- Duplication between weewikipaint.js CONTENT_DIR and our Jakefile
-- Do we want to copy src/server/ files to build directory?
-- What about deployment? (Punt?)
-
+- Get a Karma preprocessor working for CommonJS modules
+  - Implement stub version of require, module, exports
+- Implement require() to load CommonJS modules in Karma
+- Upgrade to latest version of Karma (with new preprocessor support)?
 
 Future ideas:
 - Create 'fail fast' assertion code
