--- a/todo.txt
+++ b/todo.txt
@@ -29,6 +29,9 @@ Engineering Tasks:
 - Fix issue with Jake not showing stdout/stderr of shell commands (e.g., `./jake karma`)
 
 To Do on current task:
+- BEFORE NEXT EPISODE:
+  - Does our module caching code have problems with being stale after code is changed?
+
 - Remove hard-coded dependency on base path in CJSRequire
 - Modify CJSRequire's path normalization to support all relative paths
 - When module isn't found, error should point to require() statement in module, not to commonjs_bridge.
