--- a/todo.txt
+++ b/todo.txt
@@ -15,19 +15,15 @@ User Stories:
   - test that em is converted px
 - Use mouseleave event to draw line to edge when mouse moving quickly? (Thx Danny Jones, E67)
 - Deploy (including smoke test to ensure that div is in home page)
+  - Create a 'run' build target in our Jakefile
 
 Engineering Tasks:
 * Get require(), modules, and exports working in Karma without using browserify
   (so error messages have sensible filenames and line nums)
 
 To Do on current task:
-- Rename 'SUPPORTED_BROWSERS' in Jakefile
-- (punt) bundle vendor files (tried browserify-shim)
-- (punt) Use Modernizr to eliminate duplicate browserSupportsTouchEvents() function (in _client_test.js & _dom_element_test.js)?
-- (punt) Duplication between weewikipaint.js CONTENT_DIR and our Jakefile
-- (punt) What about deployment?
-- (punt) Do we want to copy src/server/ files to build directory?
 - (off-camera) Fix issue with Jake not showing stdout/stderr of shell commands (e.g., `./jake karma`)
+- Fix karma.conf.js log level
 - Integrate
 
 Future ideas:
