--- a/todo.txt
+++ b/todo.txt
@@ -22,12 +22,11 @@ User Stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-* Create a 'run' build target in our Jakefile
-- change client to not stop drawing when mouse leaves drawing area
+* change client to not stop drawing when mouse leaves drawing area
 - handle the case where user lets go of mouse button outside drawing area
 
 To Do on current task:
-* Get Jakefile using _run_server.js
+-
 
 Future ideas:
 - Create 'fail fast' assertion code
