--- a/todo.txt
+++ b/todo.txt
@@ -28,6 +28,8 @@ Engineering Tasks:
 To Do on current task:
 - Update README for our new Jakefile 'run' task
 - Can we remove dimension test in _client_test.js?
+- Create HtmlElement.documentBody?
+- Eliminate need for JQuery element on HtmlElement constructor?
 
 Future ideas:
 - Create 'fail fast' assertion code
