--- a/todo.txt
+++ b/todo.txt
@@ -26,6 +26,10 @@ Engineering Tasks:
 - handle the case where user lets go of mouse button outside drawing area
 
 To Do on current task:
+- BEFORE NEXT EPISODE:
+  - Move CJSModules elsewhere (other than __karma__); see https://github.com/karma-runner/karma/issues/552
+  - Fix 'dependency' vs. 'dependencyPath' in karma_commonjs_bridge.js (former is needed for error reporting)
+  - Try drawing while scrolling mousewheel
 - Create HtmlElement.documentBody?
 - Eliminate need for JQuery element on HtmlElement constructor?
 
