--- a/todo.txt
+++ b/todo.txt
@@ -25,10 +25,13 @@ Engineering Tasks:
 * pass through pageOffset rather than relativeOffset in HtmlElement event handlers
 - change client to not stop drawing when mouse leaves drawing area
   - uncomment test
+- Deal with duplication in touch event testing (use Modernizr?)
+- What is up with IE 8 failing when Chrome is not running?
 - handle the case where user lets go of mouse button outside drawing area
 - draw a single pixel when mouse is clicked (or screen is tapped)
 
 To Do on current task:
+- AT START OF EPISODE:
 - Change HtmlElement to return page offsets rather than relative offsets
 
 - Create HtmlElement.documentBody?
